--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQStartExamDetailVC.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQStartExamDetailVC.xib
@@ -41,20 +41,20 @@
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="260"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTE-8B-DmV">
-                                            <rect key="frame" x="20" y="5" width="344" height="21"/>
+                                            <rect key="frame" x="20" y="15" width="344" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RmO-jq-xfT" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                            <rect key="frame" x="20" y="57" width="344" height="193"/>
+                                            <rect key="frame" x="20" y="67" width="344" height="80"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="193" id="r5r-dr-RMT"/>
+                                                <constraint firstAttribute="height" constant="80" id="r5r-dr-RMT"/>
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUh-zr-Wfb">
-                                            <rect key="frame" x="20" y="34" width="37.5" height="18"/>
+                                            <rect key="frame" x="20" y="44" width="37.5" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -62,15 +62,14 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="260" id="7ut-Mz-41P"/>
+                                        <constraint firstAttribute="height" priority="1" constant="260" id="7ut-Mz-41P"/>
                                         <constraint firstAttribute="trailing" secondItem="RmO-jq-xfT" secondAttribute="trailing" constant="10" id="Edv-nb-yOb"/>
                                         <constraint firstItem="IUh-zr-Wfb" firstAttribute="leading" secondItem="sTE-8B-DmV" secondAttribute="leading" id="KtD-4S-Jf6"/>
                                         <constraint firstAttribute="trailing" secondItem="sTE-8B-DmV" secondAttribute="trailing" constant="10" id="Xxt-eZ-ykf"/>
                                         <constraint firstItem="RmO-jq-xfT" firstAttribute="leading" secondItem="bE4-Xa-UmE" secondAttribute="leading" constant="20" id="dGX-Or-ikR"/>
                                         <constraint firstItem="RmO-jq-xfT" firstAttribute="top" secondItem="IUh-zr-Wfb" secondAttribute="bottom" constant="5" id="l4R-YT-C89"/>
-                                        <constraint firstAttribute="bottom" secondItem="RmO-jq-xfT" secondAttribute="bottom" constant="10" id="nXR-tF-kKv"/>
                                         <constraint firstItem="IUh-zr-Wfb" firstAttribute="top" secondItem="sTE-8B-DmV" secondAttribute="bottom" constant="8" id="q0h-a7-JMQ"/>
-                                        <constraint firstItem="sTE-8B-DmV" firstAttribute="top" secondItem="bE4-Xa-UmE" secondAttribute="top" constant="5" id="sml-IR-ijh"/>
+                                        <constraint firstItem="sTE-8B-DmV" firstAttribute="top" secondItem="bE4-Xa-UmE" secondAttribute="top" constant="15" id="sml-IR-ijh"/>
                                         <constraint firstItem="sTE-8B-DmV" firstAttribute="leading" secondItem="bE4-Xa-UmE" secondAttribute="leading" constant="20" id="tO5-ob-cpa"/>
                                     </constraints>
                                 </view>
