--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireAlarmDetailViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireAlarmDetailViewController.xib
@@ -93,7 +93,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="处理结果" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cql-9v-gg1">
-                    <rect key="frame" x="95" y="276" width="245" height="14.5"/>
+                    <rect key="frame" x="93.5" y="276" width="246.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -105,11 +105,11 @@
                 <constraint firstAttribute="trailing" secondItem="K3d-jU-Bzw" secondAttribute="trailing" constant="5" id="8SE-Eu-8Ph"/>
                 <constraint firstItem="75q-sE-FP2" firstAttribute="top" secondItem="1Rc-uO-Hs1" secondAttribute="bottom" constant="30" id="9Pm-Qh-IKh"/>
                 <constraint firstItem="uzC-ce-jCj" firstAttribute="centerY" secondItem="EDO-TB-cU6" secondAttribute="centerY" id="B1x-37-1D5"/>
-                <constraint firstItem="cql-9v-gg1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="95" id="EWp-Oc-aCI"/>
                 <constraint firstItem="K3d-jU-Bzw" firstAttribute="leading" secondItem="vMC-NK-IDV" secondAttribute="leading" id="FRQ-LY-0L1"/>
                 <constraint firstItem="75q-sE-FP2" firstAttribute="trailing" secondItem="1Rc-uO-Hs1" secondAttribute="trailing" id="HTH-ml-dAZ"/>
                 <constraint firstItem="vMC-NK-IDV" firstAttribute="top" secondItem="msS-f5-NJt" secondAttribute="bottom" constant="30" id="HZS-ad-2YB"/>
                 <constraint firstItem="Y7P-8x-eT9" firstAttribute="leading" secondItem="i0H-Tk-a2c" secondAttribute="leading" id="KZa-vv-JXh"/>
+                <constraint firstItem="msS-f5-NJt" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="18.5" id="L4m-FM-IVL"/>
                 <constraint firstItem="0BL-Mx-mby" firstAttribute="centerY" secondItem="1Rc-uO-Hs1" secondAttribute="centerY" id="NNY-vz-SUz"/>
                 <constraint firstItem="cql-9v-gg1" firstAttribute="top" secondItem="uzC-ce-jCj" secondAttribute="bottom" constant="25" id="Ncr-2d-PZC"/>
                 <constraint firstItem="1Rc-uO-Hs1" firstAttribute="trailing" secondItem="Ibw-uP-KtG" secondAttribute="trailing" id="P2h-tE-lpA"/>
@@ -122,6 +122,7 @@
                 <constraint firstItem="Y7P-8x-eT9" firstAttribute="centerY" secondItem="75q-sE-FP2" secondAttribute="centerY" id="gs2-Yx-xYo"/>
                 <constraint firstItem="Ibw-uP-KtG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="in8-gc-lnk"/>
                 <constraint firstAttribute="trailing" secondItem="uzC-ce-jCj" secondAttribute="trailing" constant="5" id="nEb-RS-I53"/>
+                <constraint firstItem="cql-9v-gg1" firstAttribute="leading" secondItem="msS-f5-NJt" secondAttribute="trailing" constant="5" id="og0-2p-bjM"/>
                 <constraint firstAttribute="trailing" secondItem="cql-9v-gg1" secondAttribute="trailing" constant="5" id="pge-Ni-b9b"/>
                 <constraint firstItem="msS-f5-NJt" firstAttribute="trailing" secondItem="EDO-TB-cU6" secondAttribute="trailing" id="q2n-3c-egf"/>
                 <constraint firstItem="i0H-Tk-a2c" firstAttribute="leading" secondItem="Ibw-uP-KtG" secondAttribute="trailing" constant="5" id="u0a-dj-e3c"/>
