8-14bate版的修改打包测试;

--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireAlarmDetailViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireAlarmDetailViewController.xib
@@ -105,6 +105,7 @@
                 <constraint firstAttribute="trailing" secondItem="K3d-jU-Bzw" secondAttribute="trailing" constant="5" id="8SE-Eu-8Ph"/>
                 <constraint firstItem="75q-sE-FP2" firstAttribute="top" secondItem="1Rc-uO-Hs1" secondAttribute="bottom" constant="30" id="9Pm-Qh-IKh"/>
                 <constraint firstItem="uzC-ce-jCj" firstAttribute="centerY" secondItem="EDO-TB-cU6" secondAttribute="centerY" id="B1x-37-1D5"/>
+                <constraint firstItem="cql-9v-gg1" firstAttribute="leading" secondItem="i0H-Tk-a2c" secondAttribute="leading" id="CZZ-f7-5eG"/>
                 <constraint firstItem="K3d-jU-Bzw" firstAttribute="leading" secondItem="vMC-NK-IDV" secondAttribute="leading" id="FRQ-LY-0L1"/>
                 <constraint firstItem="75q-sE-FP2" firstAttribute="trailing" secondItem="1Rc-uO-Hs1" secondAttribute="trailing" id="HTH-ml-dAZ"/>
                 <constraint firstItem="vMC-NK-IDV" firstAttribute="top" secondItem="msS-f5-NJt" secondAttribute="bottom" constant="30" id="HZS-ad-2YB"/>
@@ -122,7 +123,6 @@
                 <constraint firstItem="Y7P-8x-eT9" firstAttribute="centerY" secondItem="75q-sE-FP2" secondAttribute="centerY" id="gs2-Yx-xYo"/>
                 <constraint firstItem="Ibw-uP-KtG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="in8-gc-lnk"/>
                 <constraint firstAttribute="trailing" secondItem="uzC-ce-jCj" secondAttribute="trailing" constant="5" id="nEb-RS-I53"/>
-                <constraint firstItem="cql-9v-gg1" firstAttribute="leading" secondItem="msS-f5-NJt" secondAttribute="trailing" constant="5" id="og0-2p-bjM"/>
                 <constraint firstAttribute="trailing" secondItem="cql-9v-gg1" secondAttribute="trailing" constant="5" id="pge-Ni-b9b"/>
                 <constraint firstItem="msS-f5-NJt" firstAttribute="trailing" secondItem="EDO-TB-cU6" secondAttribute="trailing" id="q2n-3c-egf"/>
                 <constraint firstItem="i0H-Tk-a2c" firstAttribute="leading" secondItem="Ibw-uP-KtG" secondAttribute="trailing" constant="5" id="u0a-dj-e3c"/>
