--- a/OpticalValleyUnite/Classes/UI/Login/ViewController/LoginViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/Login/ViewController/LoginViewController.xib
@@ -125,7 +125,7 @@
                         <action selector="forgotPasswordBtnClick:" destination="-1" eventType="touchUpInside" id="F2x-1m-rKa"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="试点版" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nC9-kV-mSn">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正式版" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nC9-kV-mSn">
                     <rect key="frame" x="166" y="640" width="43" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
